# cdc-action-zone-monitor

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  config.toml
.claude/agents/: api-integrator.md  code-reviewer.md  deploy-ops.md  indicator-qa.md  rust-systems.md
.github/workflows/: ci.yml
docs/: getting-started.md
src/: alerts.rs  config.rs  data.rs  fsutil.rs  http.rs  main.rs  signals.rs  state.rs  watchlist.rs
src/alerts/: telegram.rs
src/data/: binance.rs  yahoo.rs
src/signals/: cdc_zone.rs  indicators.rs
