[package]
name = "cdc-az-daily-alert"
version = "0.1.0"
edition = "2024"

[dependencies]
ureq = { version = "3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
anyhow = "1"
dotenvy = "0.15"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
owo-colors = { version = "4", features = ["supports-colors"] }
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
items_after_statements = "allow"
too_many_lines = "allow"
module_name_repetitions = "allow"

[profile.release]
strip = true
lto = true
